--- a/static/index.html
+++ b/static/index.html
@@ -10,10 +10,10 @@
     <script src="https://unpkg.com/random-js@2.0.0/dist/random-js.min.js"></script>
     <script src="https://cdn.socket.io/3.1.3/socket.io.min.js"></script>
     <script src="fabric.min.js"></script>
-    <script type="module" src="game.js"></script>
+    <script src="game.js"></script>
 </head>
 <body>
-    <canvas id="canvas" width="800" height="600"></canvas>
+    <canvas id="canvas" class="game-canvas" width="800" height="600"></canvas>
 
     <div class="player-start-screen hide">
         <input type="text" maxlength="10" placeholder="Zadajte meno" class="player-name-input">
