--- a/static/index.html
+++ b/static/index.html
@@ -57,6 +57,6 @@
         </span>
     </p>
 
-    <div class="floating-text hide"><span>NotADobble</span></div>
+    <!-- <div class="floating-text"><span>NotADobble</span></div> -->
 </body>
 </html>
