fix display name

--- a/static/index.html
+++ b/static/index.html
@@ -50,12 +50,12 @@
     <p class="card-left hide">
         <span class="card-left-num"></span> left
     </p>
-    <p class="player-display hide">
+    <div class="player-display hide">
         <span class="player-display-name">foo</span>
         <span class="player-display-streak">
-            <span class="player-display-streak-num">27</span>x
+            <span class="player-display-streak-num">9</span>x
         </span>
-    </p>
+    </div>
 
     <!-- <div class="floating-text"><span>NotADobble</span></div> -->
 </body>
