--- a/static/index.html
+++ b/static/index.html
@@ -19,15 +19,15 @@
         <div class="room-set-area">
             <span>Room: </span>
             <input class="room-set-input" type="text" maxlength="8" placeholder="main">
-            <div class="room-set-but">Set room</div>
+            <div class="room-set-but no-select">Set room</div>
         </div>
         <div class="player-start-screen-area">
             <input type="text" maxlength="10" placeholder="foo (your name)" class="player-name-input">
             <input type="checkbox" id="ready" class="player-ready-input hide"></input>
-            <label class="player-not-ready-label" for="ready">
+            <label class="player-not-ready-label no-select" for="ready">
                 ain`t prepared.
             </label>
-            <label class="player-ready-label" for="ready">
+            <label class="player-ready-label no-select" for="ready">
                 <b>is ready!</b>
             </label>
             <div class="player-list-container">
@@ -54,10 +54,10 @@
         <div class="blob"></div>
     </div>
 
-    <p class="card-left hide">
+    <p class="card-left no-select hide">
         <span class="card-left-num"></span> left
     </p>
-    <div class="player-display hide">
+    <div class="player-display no-select hide">
         <span class="player-display-name">foo</span>
         <span class="player-display-streak">
             <span class="player-display-streak-num">9</span>x
