--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,9 @@
                 </ul>
             </div>
         </div>
+        <!-- <div class="popup-symbol appear">
+            <img src='http://localhost/images/symbols/svelte.png' width="60" height="60">
+        </div> -->
     </div>
 
     <div class="player-end-screen hide">
