design change - new intro

--- a/static/index.html
+++ b/static/index.html
@@ -35,9 +35,12 @@
                 </ul>
             </div>
         </div>
-        <!-- <div class="popup-symbol appear">
-            <img src='http://localhost/images/symbols/svelte.png' width="60" height="60">
-        </div> -->
+        <div class="popup-symbol appear" style="top:17vh; left: 13vw;">
+            <img src='http://localhost/images/symbols/photomath.png' width="60" height="60">
+        </div>
+        <div class="popup-symbol appear" style="top:82vh; left: 80vw;">
+            <img src='http://localhost/images/symbols/photomath.png' width="60" height="60">
+        </div>
     </div>
 
     <div class="player-end-screen hide">
@@ -64,6 +67,13 @@
         <span class="player-display-streak">
             <span class="player-display-streak-num">9</span>x
         </span>
+    </div>
+
+    <div class="intro">
+        <div class="intro-text">
+            <span class="intro-title">Notadobble</span>
+            <span class="intro-desc">> a game, whose goal is to find common symbol between two cards</span>
+        </div>
     </div>
 </body>
 </html>
