small design changes

--- a/static/index.html
+++ b/static/index.html
@@ -35,12 +35,17 @@
                 </ul>
             </div>
         </div>
-        <div class="popup-symbol appear" style="top:17vh; left: 13vw;">
+        <div class="popup-symbol appear no-select" style="top:17vh; left: 13vw;">
             <img src='http://localhost/images/symbols/photomath.png' width="60" height="60">
         </div>
-        <div class="popup-symbol appear" style="top:82vh; left: 80vw;">
+        <div class="popup-symbol appear no-select" style="top:82vh; left: 80vw;">
             <img src='http://localhost/images/symbols/photomath.png' width="60" height="60">
         </div>
+        <footer>
+            <span>Made By Domko 2021</span><div class="separator"></div>
+            <a href="https://github.com/warmac9/notdobble" target="_blank">Source files</a><div class="separator"></div>
+            <a href="./about" target="_blank">About project</a>
+        </footer>
     </div>
 
     <div class="player-end-screen hide">
