--- a/static/index.html
+++ b/static/index.html
@@ -44,7 +44,7 @@
         <footer>
             <span>Made By Domko 2021</span><div class="separator"></div>
             <a href="https://github.com/warmac9/notdobble" target="_blank">Source files</a><div class="separator"></div>
-            <a href="./about" target="_blank">About project</a>
+            <a href="./about.html" target="_blank">About project</a>
         </footer>
     </div>
 
