design changes - popup

--- a/static/index.html
+++ b/static/index.html
@@ -35,10 +35,10 @@
                 </ul>
             </div>
         </div>
-        <div class="popup-symbol appear no-select" style="top:17vh; left: 13vw;">
+        <div class="popup-symbol no-select" style="top:17vh; left: 13vw;">
             <img src='http://localhost/images/symbols/photomath.png' width="60" height="60">
         </div>
-        <div class="popup-symbol appear no-select" style="top:82vh; left: 80vw;">
+        <div class="popup-symbol no-select" style="top:82vh; left: 80vw;">
             <img src='http://localhost/images/symbols/photomath.png' width="60" height="60">
         </div>
         <footer>
