--- a/static/about/index.html
+++ b/static/about/index.html
@@ -6,35 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notadobble</title>
     <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-        }
         header {
             font-size: 60px;
         }
         article {
-            margin: 40px auto 40px auto;
+            position: absolute !important;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
             max-width: 900px;
-            box-sizing: border-box;
             width: 90%;
             border: solid 4px #2e2d2d;
             border-radius: 20px;
-            padding: 60px;
-            font-family: serif;
-            font-size: 25px;
+            padding: 2vw; 
             font-weight: bold;
             color: #2e2d2d;
             background-color: #fbfbfb;
+            font-size: 25px;
         }
     </style>
 </head>
 <body>
     <article>
         <header>O projekte</header>
-        <p>
-
-        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla a quam justo. Nullam magna dui, tempus vel velit vel, accumsan congue ante. Suspendisse venenatis porttitor sem in porta. Morbi elementum consectetur erat, ut tincidunt mi tempus consequat. Cras dictum condimentum arcu, vestibulum imperdiet quam lacinia vitae. Praesent et eros ut libero blandit volutpat. Aliquam erat volutpat.</p>
     </article>
 </body>
 </html>
