design change ready button

--- a/static/index.html
+++ b/static/index.html
@@ -21,14 +21,16 @@
             <div class="room-set-but no-select">Set room</div>
         </div>
         <div class="player-start-screen-area">
-            <input type="text" maxlength="10" placeholder="foo (your name)" class="player-name-input">
-            <input type="checkbox" id="ready" class="player-ready-input hide"></input>
-            <label class="player-not-ready-label no-select" for="ready">
-                ain`t prepared.
-            </label>
-            <label class="player-ready-label no-select" for="ready">
-                <b>is ready!</b>
-            </label>
+            <div class="player-start-screen-ready">
+                <input type="text" maxlength="10" placeholder="foo (your name)" class="player-name-input">
+                <input type="checkbox" id="ready" class="player-ready-input hide"></input>
+                <label class="player-not-ready-label no-select" for="ready">
+                    ain`t prepared.
+                </label>
+                <label class="player-ready-label no-select" for="ready">
+                    <b>is ready!</b>
+                </label>
+            </div>
             <div class="player-list-container">
                 <b class="player-list-title">Players:</b>
                 <ul class="player-list">
