--- a/static/about/index.html
+++ b/static/about/index.html
@@ -31,6 +31,16 @@
     <article>
         <header>O projekte</header>
         <p>
+            Ako ročníkový projekt som si vybral vyvinúť digitálnu multiplayerovú verziu hry Dobble, ktorej cieľom je nájsť dva rovnaké symboly na kartách. Dobble ma fascinovala nielen tým, že nakoľko je hra jednoduchá je veľmi chytľavá, ale aj matematikou ktorá je, za tým, že každá karta má iba jeden symbol rovnaký s ľubovoľnou inou kartou s balíčka.
+        </p>
+        <p>
+            Čo sa týka dizajnovania aplikácie, tak som narazil na viacero zaujímavých problémov. Akým spôsobom a kto bude vedieť spusťiť hru. Nakoniec som sa rozhodol pre demokraciu, kedy každý hráč musí potvrdiť, že je pripravený. Avšak kvôli tomu vnikol problém, že niekto v hlavnej miestnosti, môže zostať stále nepripravený (troll), čo zapričiní, že spustenie hry bude blokované dokým sa neodpojí alebo „nepripravý“. To ma viedol k tomu, aby hráči boli schopný si vytvoriť a nazvať vlastné miestnosti, vďaka čomu môže hra bežať viac krát.
+        </p>
+        <p>
+            Pôvodne som chcel hru programovať v Pythone, v ktorom som si naprogramoval aj svoj framework (obmedzenejší game engine) na účel vytvorenia hry. Nakoniec som sa rozhodol naprogramovať hru pre prehliadač, vďaka čomu je hra ľahšie dostupnejšia a distribuovateľnejšia. Ďalším dôvodom bolo existencia skvelej knižnice socket.io, ktorá poskytuje socketovu komuníkaciu v prostredí Node.js, ktorá je oproti Ajax calls vhodnejšia na tvorbu online hry vďaka lepšej časovej odozve.
+        </p>
+        <p>
+            Vďaka tomuto projektu som si trošku oprášil js a naučil sa implentovať nové funkcie Js ako napr. rozdeliť si kód do modulov alebo použitie async funkcií. Na prácu s canvasom, na ktorej beží hra (Ui ide cez klasické html), som použil knižnicu fabric.js, ktorá mi značne uľahčila prácu s canvasom.
         </p>
     </article>
 </body>
