--- a/static/index.html
+++ b/static/index.html
@@ -32,9 +32,10 @@
                 </label>
             </div>
             <div class="player-list-container">
-                <b class="player-list-title">Players:</b>
+                <b class="player-list-title">Other players:</b>
                 <ul class="player-list">
                 </ul>
+                <p class="note"><i>All players(min. 2) in the room need to be ready in order for the game to start</i></p>
             </div>
         </div>
         <div class="popup-symbol no-select" style="top:17vh; left: 13vw;">
